lander.lessons.lander.lvl1_lander_101.Lander101.scala.code
if(getVitesseY()<=(-10)){
	setPousee(1)
}
else{
	setPouseeDesiree(0)
}